--- a/projects/cat-kit-ui/src/lib/sidebar/components/main.body.component/main.body.component.html
+++ b/projects/cat-kit-ui/src/lib/sidebar/components/main.body.component/main.body.component.html
@@ -1,8 +1,8 @@
-<div class="main">
+<div class="main" [ngClass]="{'mobile': sidenavLayoutService.isMobile}">
     <div class="header">
-        <button class="menu-btn" *ngIf="sidenavLayoutService.isMobile"
+        <button class="button" *ngIf="sidenavLayoutService.isMobile"
             (click)="sidenavLayoutService.toggleSidenav()">☰</button>
-        <h1>My App</h1>
+        <h3>My App</h3>
     </div>
     <div class="content">
         <ng-content></ng-content>
