--- a/projects/cat-kit-ui/src/lib/sidebar/components/main.body.component/main.body.component.scss
+++ b/projects/cat-kit-ui/src/lib/sidebar/components/main.body.component/main.body.component.scss
@@ -1,4 +1,4 @@
-.main {
+:host {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -26,5 +26,12 @@
         overflow-y: auto;
         flex: 1;
         background-color: #ecf0f1;
+    }
+}
+
+@media (max-width: 768px) {
+    :host {
+        flex: 1;
+        width: 100%; // full width always  
     }
 }
