--- a/projects/cat-kit-ui/src/lib/sidebar/components/sidenav.component/sidenav.component.scss
+++ b/projects/cat-kit-ui/src/lib/sidebar/components/sidenav.component/sidenav.component.scss
@@ -1,8 +1,9 @@
-.sidenav {
+@import "../../../assets/_variables";
+
+:host {
     width: 250px;
     height: 100%;
-    background-color: #2c3e50;
-    color: #ecf0f1;
+    background-color: $sidenav-background-color;
     flex-shrink: 0;
     transform: translateX(0);
     transition: transform 0.3s ease;
@@ -18,8 +19,25 @@
     .close-btn {
         background: none;
         border: none;
-        font-size: 20px;
-        color: #ecf0f1;
+        font-size: 24px;
         cursor: pointer;
+        position: absolute;
+        right: 5px;
+        top: 5px;
+    }
+}
+
+@media (max-width: 768px) {
+    :host {
+        position: fixed; // overlay on top
+        top: 0;
+        left: 0;
+        height: 100%;
+        z-index: 1000;
+        transform: translateX(-100%); // hidden by default
+
+        &.open {
+            transform: translateX(0); // slide in
+        }
     }
 }
