--- a/projects/cat-kit-ui/src/lib/sidebar/components/main.body.component/main.body.component.html
+++ b/projects/cat-kit-ui/src/lib/sidebar/components/main.body.component/main.body.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <button class="button" *ngIf="sidenavLayoutService.isMobile"
             (click)="sidenavLayoutService.toggleSidenav()">☰</button>
-        <h3>My App</h3>
+        <h3>{{title}}</h3>
     </div>
     <div class="content">
         <ng-content></ng-content>
