--- a/projects/cat-kit-ui/src/lib/sidebar/components/sidenav.component/sidenav.component.scss
+++ b/projects/cat-kit-ui/src/lib/sidebar/components/sidenav.component/sidenav.component.scss
@@ -3,11 +3,11 @@
 :host {
     width: 250px;
     height: 100%;
-    background-color: $sidenav-background-color;
+    background-color: #1a6ebc;
     flex-shrink: 0;
     transform: translateX(0);
     transition: transform 0.3s ease;
-
+    box-shadow: 1px 0px 3px 1px #1a6ebc;
     &.open {
         transform: translateX(0);
     }
