--- a/projects/cat-kit-ui/src/lib/sidebar/components/sidenav.component/sidenav.component.html
+++ b/projects/cat-kit-ui/src/lib/sidebar/components/sidenav.component/sidenav.component.html
@@ -1,3 +1,6 @@
-<button class="close-btn" *ngIf="sidenavLayoutService.isMobile"
-    (click)="sidenavLayoutService.toggleSidenav()">✕</button>
+<div class="toggle" *ngIf="sidenavLayoutService.isMobile" [ngClass]="{'open' : sidenavLayoutService.isSidenavOpen}" (click)="sidenavLayoutService.toggleSidenav()">
+    <span class="toggle-btn" *ngIf="!sidenavLayoutService.isSidenavOpen">☰</span>
+    <span class="toggle-btn" *ngIf="sidenavLayoutService.isSidenavOpen">✕</span>
+</div>
+
 <ng-content></ng-content>
