--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,14 @@
-<kit-sidenav-layout>
+<kit-sidenav-layout [title]="'Cat-Kit UI 0.0.0.1'">
   <kit-sidenav>
     @for (item of menu; track item.id){
-      <a [href]="item.url">
-        <div>
-        <i class="{{item.icon}}"></i>{{item.text}}
+      <a [href]="item.url" class="list-item">
+        <div class="list-item-body">
+          <i class="{{item.icon}}"></i>{{item.text}}
         </div>
       </a>
     }
   </kit-sidenav>
-  <kit-main-body [title]="'Cat-Kit UI 0.0.0.1'">
+  <kit-main-body>
     <router-outlet />
   </kit-main-body>
 </kit-sidenav-layout>
