--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,7 +2,7 @@
 
 .list-item{
     text-decoration: none;
-    color: #eae7e7;
+    color: $text-color-light;
 }
 .list-item-body{
     width: 100%;
