--- a/projects/cat-kit-ui/src/lib/assets/_variables.scss
+++ b/projects/cat-kit-ui/src/lib/assets/_variables.scss
@@ -1,2 +1,6 @@
-$text-color: #3b3b3b;
+$text-color-light: #e1e1e1;
+$text-color-dark: #363636;
+
 $primary-color: #1a6ebc;
+$primary-red: #d10000;
+$primary-green: #009e00;
