--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h3>Welcome to CatKit UI</h3>
+    <kit-content-header [title]="'Welcome to CatKit UI'" [underline]="true" [fontSize]="'2rem'"></kit-content-header>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a sem et sapien porttitor gravida eu sed lectus.
         Sed lorem dolor, malesuada ut aliquam quis, feugiat lacinia lacus. Nullam vel mi interdum, rhoncus felis ac,
