additional margin for header component

--- a/projects/cat-kit-ui/src/lib/content.header/components/content.header/content.header.component.html
+++ b/projects/cat-kit-ui/src/lib/content.header/components/content.header/content.header.component.html
@@ -1,3 +1,4 @@
-<div class="title" [ngClass]="{'underlined' : underline}" [ngStyle]="{'font-size': typeof(fontSize) == 'number' ? fontSize + 'px' : fontSize}">
+<div class="title" [ngClass]="{'underlined' : underline}"
+    [ngStyle]="{'font-size': typeof(fontSize) == 'number' ? fontSize + 'px' : fontSize}">
     {{title}}
 </div>
