--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <div>
-    <kit-content-header [title]="'Solid'" [fontSize]="'26px'" [underline]="false"></kit-content-header>
+    <kit-content-header [title]="'Solid'" [fontSize]="'18px'" [underline]="true"></kit-content-header>
     <div class="flex gap-10">
         <button class="button plain">Plain</button>
         <button class="button blue">Blue</button>
