update content headers,,  small typo fix, add select lists page

--- a/projects/cat-kit-ui/src/lib/content.header/components/content.header/content.header.component.html
+++ b/projects/cat-kit-ui/src/lib/content.header/components/content.header/content.header.component.html
@@ -1,4 +1,7 @@
 <div class="title" [ngClass]="{'underlined' : underline}"
-    [ngStyle]="{'font-size': typeof(fontSize) == 'number' ? fontSize + 'px' : fontSize}">
+    [ngStyle]="{'font-size': typeof(fontSize) == 'number' ? fontSize + 'px' : fontSize,
+        'border-bottom-color': underline ? underlineColor : 'transparent',
+        'color': textColor
+    }">
     {{title}}
 </div>
