--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -12,9 +12,16 @@
 <div>
     <kit-content-header [title]="'Solid'" [fontSize]="'18px'" [underline]="true"></kit-content-header>
     <div class="flex gap-10">
-        <button class="button plain">Plain</button>
-        <button class="button blue">Blue</button>
-        <button class="button red">Red</button>
-        <button class="button green">Green</button>
+        <button class="button solid-plain">Plain</button>
+        <button class="button solid-blue">Blue</button>
+        <button class="button solid-red">Red</button>
+        <button class="button solid-green">Green</button>
+    </div>
+    <kit-content-header [title]="'Outlined'" [fontSize]="'18px'" [underline]="true"></kit-content-header>
+    <div class="flex gap-10">
+        <button class="button outlined-plain">Plain</button>
+        <button class="button outlined-blue">Blue</button>
+        <button class="button outlined-red">Red</button>
+        <button class="button outlined-green">Green</button>
     </div>
 </div>
