--- a/projects/cat-kit-ui/src/lib/assets/buttons.scss
+++ b/projects/cat-kit-ui/src/lib/assets/buttons.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 
+$default-background-button-color: #ededed;
 .button{
     padding-top: 6px;
     padding-bottom: 6px;
@@ -13,36 +14,74 @@
     cursor: pointer;
     transition: box-shadow 0.2s;
 
-    &.plain:hover{
+    &.solid-plain{
+        background-color: $default-background-button-color;
+    }
+
+    &.solid-plain:hover{
         box-shadow: 0px 0px 2px 1px adjust-color($color: #c9c9c9, $lightness: -10%, $alpha: 1);
     }
 
-    &.blue{
+    &.solid-blue{
         background-color: $primary-color;
         border: 1px solid $primary-color;
         color: $text-color-light;
     }
 
-    &.blue:hover{
+    &.solid-blue:hover{
         box-shadow: 0px 0px 2px 1px adjust-color($color: $primary-color, $lightness: 10%, $alpha: 0.5);
     }
 
-    &.red{
+    &.solid-red{
         background-color: $primary-red;
         color: $text-color-light;
         border: 1px solid $primary-red;
     }
 
-    &.red:hover{
+    &.solid-red:hover{
         box-shadow: 0px 0px 2px 1px adjust-color($color: $primary-red, $lightness: 10%, $alpha: 0.8);
     }
 
-    &.green{
+    &.solid-green{
         background-color: $primary-green;
         color: $text-color-light;
         border: 1px solid $primary-green;
     }
-    &.green:hover{
+    &.solid-green:hover{
+        box-shadow: 0px 0px 2px 1px adjust-color($color: $primary-green, $lightness: 10%, $alpha: 0.8);
+    }
+
+    &.outlined-plain{
+        background-color: #ededed;
+    }
+
+    &.outlined-plain:hover{
+        box-shadow: 0px 0px 2px 1px adjust-color($color: #c9c9c9, $lightness: -10%, $alpha: 1);
+    }
+
+    &.outlined-blue{
+        background-color: $default-background-button-color;
+        border: 1px solid $primary-color;
+    }
+
+    &.outlined-blue:hover{
+        box-shadow: 0px 0px 2px 1px adjust-color($color: $primary-color, $lightness: 10%, $alpha: 0.5);
+    }
+
+    &.outlined-red{
+        background-color: $default-background-button-color;
+        border: 1px solid $primary-red;
+    }
+
+    &.outlined-red:hover{
+        box-shadow: 0px 0px 2px 1px adjust-color($color: $primary-red, $lightness: 10%, $alpha: 0.8);
+    }
+
+    &.outlined-green{
+        background-color: $default-background-button-color;
+        border: 1px solid $primary-green;
+    }
+    &.outlined-green:hover{
         box-shadow: 0px 0px 2px 1px adjust-color($color: $primary-green, $lightness: 10%, $alpha: 0.8);
     }
 }
