--- a/src/app/components/tables/tables.component.html
+++ b/src/app/components/tables/tables.component.html
@@ -4,9 +4,9 @@
 <div>
     <kit-content-header [title]="'Basic Table'" [underline]="true" [fontSize]="'1rem'"></kit-content-header>
     <kit-table [dataSource]="staticData10Items" >
-        <kit-column [caption]="'ID'" [field]="'id'"></kit-column>
-        <kit-column [caption]="'Name'" [field]="'name'"></kit-column>
-        <kit-column [caption]="'Email'" [field]="'email'"></kit-column>
-        <kit-column [caption]="'Country Code'" [field]="'countryCode'"></kit-column>
+        <kit-column [caption]="'ID'" [field]="'id'" [captionPosition]="'left'"></kit-column>
+        <kit-column [caption]="'Name'" [field]="'name'" [captionPosition]="'left'"></kit-column>
+        <kit-column [caption]="'Email'" [field]="'email'" [captionPosition]="'left'"></kit-column>
+        <kit-column [caption]="'Country Code'" [field]="'countryCode'" [captionPosition]="'left'"></kit-column>
     </kit-table>
 </div>
