change pager styling, add next page, previous page buttons,

--- a/projects/cat-kit-ui/src/lib/sidebar/components/main.body.component/main.body.component.scss
+++ b/projects/cat-kit-ui/src/lib/sidebar/components/main.body.component/main.body.component.scss
@@ -17,7 +17,7 @@
 
     .content {
         padding: 16px;
-        overflow-y: hidden;
+        overflow-y: auto;
         flex: 1;
         background-color: $text-color-light;
         height: calc(100vh - 25px);
