--- a/src/app/components/tables/tables.component.html
+++ b/src/app/components/tables/tables.component.html
@@ -1,7 +1,7 @@
 <div>
     <kit-content-header [title]="'Tables'" [underline]="true" [fontSize]="'1.5rem'"></kit-content-header>
 </div>
-<!-- <div>
+<div>
     <kit-content-header [title]="'Basic Table'" [underline]="true" [fontSize]="'1rem'"></kit-content-header>
     <kit-table [dataSource]="staticData10Items" >
         <kit-column [caption]="'ID'" [field]="'id'" [captionPosition]="'left'"></kit-column>
@@ -9,7 +9,7 @@
         <kit-column [caption]="'Email'" [field]="'email'" [captionPosition]="'left'"></kit-column>
         <kit-column [caption]="'Country Code'" [field]="'countryCode'" [captionPosition]="'left'"></kit-column>
     </kit-table>
-</div> -->
+</div>
 
 <div>
     <kit-content-header [title]="'Paging tables'" [underline]="true" [fontSize]="'1rem'"></kit-content-header>
