--- a/projects/cat-kit-ui/src/lib/notification/components/notification/notification.component.html
+++ b/projects/cat-kit-ui/src/lib/notification/components/notification/notification.component.html
@@ -5,7 +5,7 @@
     <div class="notification-text">
         {{message}}
     </div>
-    <div class="close-btn">
+    <div class="close-btn" (click)="closeWindow()">
         <i class="fa fa-xmark"></i>
     </div>
 </div>
