--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <kit-sidenav-layout [title]="'Cat-Kit UI 0.0.0.1'">
   <kit-sidenav>
-    @for (item of menu; track item.id){
+    @for (item of menu; track item.text){
       <a [href]="item.url" class="list-item">
         <div class="list-item-body">
           <i class="{{item.icon}}"></i>{{item.text}}
