--- a/projects/cat-kit-ui/src/lib/notification/components/notification/notification.component.html
+++ b/projects/cat-kit-ui/src/lib/notification/components/notification/notification.component.html
@@ -1,11 +1,11 @@
-<div class="notification-body" [ngClass]="type">
+<div class="notification-body" [ngClass]="type" [ngStyle]="{'opactity': opacity}">
     <div class="notification-header">
         {{header}}
     </div>
     <div class="notification-text">
         {{message}}
     </div>
-    <div class="close-btn" (click)="closeWindow()">
+    <!-- <div class="close-btn" (click)="closeWindow()">
         <i class="fa fa-xmark"></i>
-    </div>
+    </div> -->
 </div>
