--- a/projects/cat-kit-ui/src/lib/notification/components/notification/notification.component.scss
+++ b/projects/cat-kit-ui/src/lib/notification/components/notification/notification.component.scss
@@ -4,6 +4,9 @@
     min-width: 300px;
     max-width: 340px;
     position: relative;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    
     .notification-header{
         width: 80%;
         max-width: 80px;
